[package]
name = "adventurers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
prost-types = "0.14.1"
rand = { version = "0.9.2", features = ["serde"] }
serde = "1.0.228"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
